--- a/style.css
+++ b/style.css
@@ -3,3 +3,13 @@ p{
     font-size: 20px;
     font-weight: bold;
 }
+h1{
+    color: rgb(60, 60, 60);
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
